Add support for audio/{x-}mpegurl mime type for HLS.

I.e., add support for audio/mpegurl and audio/x-mpegurl.

Sadly, despite documentation indicating that audio/x-mpegurl is not a
standard mime-type, Apple's HLS validator and HLS example site itself
reports this mime type as valid for HLS serving. audio/mpegurl is
specified in the documentation, so also add support for it.

BUG=675552
TEST=updated unittests

Review-Url: https://codereview.chromium.org/2640373002
Cr-Commit-Position: refs/heads/master@{#444934}

Former-commit-id: fb0830575b5d15718194f802d48c80e6450eddde